tests/NormalTests/paczka1/small_fuzzy/58323720.err
Error in line 1: eogeBt3NruT A62 73,6
Error in line 12: Tap S907 92,2
